--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/poster.jpg"
+                    alt="poster"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -110,12 +121,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolios/restaurant.jpg"
-                  alt="restaurant"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/restaurant.jpg"
+                    alt="restaurant"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
                   <p class="portfolio-text">Приложение</p>
@@ -124,12 +141,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolios/headphones.jpg"
-                  alt="headphones"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/headphones.jpg"
+                    alt="headphones"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
                   <p class="portfolio-text">Маркетинг</p>
@@ -138,7 +161,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/boxes.jpg"
+                    alt="boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
                   <p class="portfolio-text">Приложение</p>
@@ -147,12 +181,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolios/inspiration.jpg"
-                  alt="inspiration"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/inspiration.jpg"
+                    alt="inspiration"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -161,7 +201,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/book.jpg"
+                    alt="book"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
                   <p class="portfolio-text">Дизайн</p>
@@ -170,12 +221,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolios/lab.jpg"
-                  alt="prodject-lab"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/lab.jpg"
+                    alt="prodject-lab"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
                   <p class="portfolio-text">Маркетинг</p>
@@ -184,7 +241,18 @@
             </li>
             <li class="portfolio-item">
               <a href="" class="link">
-                <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/laptop2.jpg"
+                    alt="laptop2"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
                   <p class="portfolio-text">Приложение</p>
@@ -254,6 +322,25 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="footer-subscribe">
+          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <label for="user_email"></label>
+          <div class="footer-input-wrap">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              id="user_email"
+              class="footer-input"
+            />
+            <button type="submit" class="footer__subscribe-btn">
+              Подписаться
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
