--- a/index.html
+++ b/index.html
@@ -459,15 +459,79 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
           <svg class="icon-close" width="11" height="11">
             <use href="./images/icons.svg#modal-close"></use>
           </svg>
         </button>
+        <h2 class="modal-title">Оставьте свои данные, мы вам перезвоним</h2>
+        <form action="#">
+          <div class="modal-form-field">
+            <label for="user-name" class="modal-label">Имя</label>
+            <div class="modal-input-wrap">
+              <input
+                type="text"
+                name="user-name"
+                minlength="2"
+                id="user-name"
+                class="modal-input"
+                required="required"
+              />
+              <svg class="modal-icon" width="12" height="12">
+                <use href="images/icons.svg#icon-user"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label for="user-tel" class="modal-label">Телефон</label>
+            <div class="modal-input-wrap">
+              <input
+                type="tel"
+                name="user-tel"
+                minlength="10"
+                id="user-tel"
+                class="modal-input"
+                required
+              />
+              <svg class="modal-icon" width="13" height="13">
+                <use href="images/icons.svg#icon-tel"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label for="user-email" class="modal-label">Почта</label>
+            <div class="modal-input-wrap">
+              <input type="email" name="user-email" id="user-email" class="modal-input" />
+              <svg class="modal-icon" width="15" height="12">
+                <use href="images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label for="user-text" class="modal-label">Комментарий</label>
+            <div class="modal-input-wrap">
+              <textarea
+                name="user-text"
+                id="user-text"
+                maxlength="100"
+                class="modal-text"
+                placeholder="Введите текст"
+              ></textarea>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <input type="checkbox" name="policy" id="modal-check" class="modal-check vh" />
+            <label for="policy" class="modal-check-text">
+              Соглашаюсь с рассылкой и принимаю
+              <span> <a href="" class="link"> Условия договора</a></span>
+            </label>
+          </div>
+        </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
   </body>
 </html>
