--- a/portfolio.html
+++ b/portfolio.html
@@ -17,32 +17,34 @@
   <body>
     <!-- header -->
     <header class="header">
-      <div class="container header-nav">
-        <nav class="header-nav">
+      <div class="container header__nav">
+        <nav class="header__nav">
           <a href="./index.html" class="link logo"
-            ><span class="logo-color-first">Web</span>Studio</a
+            ><span class="logo__first-color">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-item"><a href="./index.html" class="header-link link">Студия</a></li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="header-link link current">Портфолио</a>
+          <ul class="header__list list">
+            <li class="header__item">
+              <a href="./index.html" class="header__link link">Студия</a>
             </li>
-            <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+            <li class="header__item">
+              <a href="./portfolio.html" class="header__link link current">Портфолио</a>
+            </li>
+            <li class="header__item"><a href="" class="header__link link">Контакты</a></li>
           </ul>
         </nav>
 
-        <ul class="header-list list">
-          <li class="contacts">
-            <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-              ><svg class="header-icon" width="16" height="12">
+        <ul class="header__list list">
+          <li class="header__contacts">
+            <a href="mailto:info@devstudio.com" class="header__link--contacts link"
+              ><svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="contacts">
-            <a href="tel:+380961111111" class="header-link-contacts link">
-              <svg class="header-icon" width="10" height="16">
+          <li class="header__contacts">
+            <a href="tel:+380961111111" class="header__link--contacts link">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
