--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     <!-- Header -->
 
     <header class="header">
-      <div class="container header-nav">
-        <nav class="header-nav">
+      <div class="container header__nav">
+        <nav class="header__nav">
           <a href="./index.html" class="link logo"
-            ><span class="logo-color-first">Web</span>Studio</a
+            ><span class="logo__first-color">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="./index.html" class="header-link link current">Студия</a>
+          <ul class="header__list list">
+            <li class="header__item">
+              <a href="./index.html" class="header__link link current">Студия</a>
             </li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">Портфолио</a>
+            <li class="header__item">
+              <a href="./portfolio.html" class="header__link link">Портфолио</a>
             </li>
-            <li class="header-item"><a href="" class="header-link link">Контакты</a></li>
+            <li class="header__item"><a href="" class="header__link link">Контакты</a></li>
           </ul>
         </nav>
 
-        <ul class="header-list list">
-          <li class="contacts">
-            <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-              ><svg class="header-icon" width="16" height="12">
+        <ul class="header__list list">
+          <li class="header__contacts">
+            <a href="mailto:info@devstudio.com" class="header__link--contacts link"
+              ><svg class="header__icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="contacts">
-            <a href="tel:+380961111111" class="header-link-contacts link">
-              <svg class="header-icon" width="10" height="16">
+          <li class="header__contacts">
+            <a href="tel:+380961111111" class="header__link--contacts link">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -57,10 +57,10 @@
 
     <main>
       <!-- hero -->
-      <section class="hero-title-bg">
-        <div class="container hero-container">
-          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="btn hero-button" data-modal-open>Заказать услугу</button>
+      <section class="hero__title--bg">
+        <div class="container hero__container">
+          <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+          <button type="button" class="btn hero__button" data-modal-open>Заказать услугу</button>
         </div>
       </section>
 
