--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
       <div class="container header__nav">
         <nav class="header__nav">
           <a href="./index.html" class="link logo"
-            ><span class="logo__first-color">Web</span>Studio</a
+            ><span class="logo--first-color">Web</span>Studio</a
           >
           <ul class="header__list list">
             <li class="header__item">
@@ -34,17 +34,17 @@
         </nav>
 
         <ul class="header__list list">
-          <li class="header__contacts">
+          <li class="header__item--contacts">
             <a href="mailto:info@devstudio.com" class="header__link--contacts link"
-              ><svg class="header__icon" width="16" height="12">
+              ><svg class="header--icon" width="16" height="12">
                 <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header__contacts">
+          <li class="header__item--contacts">
             <a href="tel:+380961111111" class="header__link--contacts link">
-              <svg class="header__icon" width="10" height="16">
+              <svg class="header--icon" width="10" height="16">
                 <use href="./images/icons.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -269,56 +269,56 @@
     <!-- footer -->
 
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-info">
-          <a href="./index.html" class="link logo logo-footer"
-            ><span class="logo-color-first">Web</span>Studio</a
+      <div class="container footer__container">
+        <div class="footer__info">
+          <a href="./index.html" class="link logo footer__logo"
+            ><span class="logo--first-color">Web</span>Studio</a
           >
-          <ul class="list footer-list">
-            <li class="footer-item">
+          <ul class="list footer__list">
+            <li class="footer__item">
               <a
                 href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-                class="footer-map link"
+                class="footer__item--map link"
                 >г. Киев, пр-т Леси Украинки, 26</a
               >
             </li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="footer-contacts link"
+            <li class="footer__item">
+              <a href="mailto:info@devstudio.com" class="footer__item--contacts link"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
+            <li class="footer__item">
+              <a href="tel:+380961111111" class="footer__item--contacts link">+38 096 111 11 11</a>
             </li>
           </ul>
         </div>
         <div class="footer-social">
-          <h2 class="footer-title">присоединяйтесь</h2>
-          <ul class="footer-social-list list">
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-icon" width="20" height="20">
+          <h2 class="footer--title">присоединяйтесь</h2>
+          <ul class="footer-social__list list">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link">
+                <svg class="footer--icon" width="20" height="20">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link">
+                <svg class="footer--icon" width="20" height="20">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link">
+                <svg class="footer--icon" width="20" height="20">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-item">
-              <a href="" class="footer-social-link">
-                <svg class="footer-icon" width="20" height="20">
+            <li class="footer-social__item">
+              <a href="" class="footer-social__link">
+                <svg class="footer--icon" width="20" height="20">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
               </a>
@@ -326,19 +326,19 @@
           </ul>
         </div>
         <div class="footer-subscribe">
-          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <h2 class="footer--title">Подпишитесь на рассылку</h2>
           <label for="user_email"></label>
-          <div class="footer-input-wrap">
+          <div class="footer__input--wrap">
             <input
               type="email"
               name="email"
               placeholder="E-mail"
               id="user_email"
-              class="footer-input"
+              class="footer__input"
             />
-            <button type="submit" class="footer__subscribe-btn">
+            <button type="submit" class="footer-subscribe__btn">
               Подписаться
-              <svg class="footer-btn-icon" width="24" height="24">
+              <svg class="footer__btn--icon" width="24" height="24">
                 <use href="./images/icons.svg#send"></use>
               </svg>
             </button>
