--- a/portfolio.html
+++ b/portfolio.html
@@ -59,205 +59,209 @@
     <main>
       <section class="portfolio">
         <div class="container">
-          <ul class="list portfolio-btn-list">
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn">Все</button>
+          <ul class="list portfolio__list--btn">
+            <li class="portfolio__item--btn">
+              <button type="button" class="portfolio--btn">Все</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn">Веб-сайти</button>
+            <li class="portfolio__item--btn">
+              <button type="button" class="portfolio--btn">Веб-сайти</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn">Приложения</button>
+            <li class="portfolio__item--btn">
+              <button type="button" class="portfolio--btn">Приложения</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn">Дизайн</button>
+            <li class="portfolio__item--btn">
+              <button type="button" class="portfolio--btn">Дизайн</button>
             </li>
-            <li class="portfolio-btn-item">
-              <button type="button" class="portfolio-btn">Маркетинг</button>
+            <li class="portfolio__item--btn">
+              <button type="button" class="portfolio--btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="list portfolio-list">
-            <li class="portfolio-item">
+          <ul class="list portfolio__list">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/laptop1.jpg"
                     alt="laptop1"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Технокряк это современная площадка распространения коронавируса. Компании
                     используют эту платформу для цифрового шпионажа и атак на защищённые сервера
                     конкурентов.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Технокряк</h3>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">Технокряк</h3>
+                  <p class="portfolio__item--text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/poster.jpg"
                     alt="poster"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
                   </h3>
-                  <p class="portfolio-text">Дизайн</p>
+                  <p class="portfolio__item--text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/restaurant.jpg"
                     alt="restaurant"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h3>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">Ресторан <span lang="en">Seafood</span></h3>
+                  <p class="portfolio__item--text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/headphones.jpg"
                     alt="headphones"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Проект <span lang="en">Prime</span></h3>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">Проект <span lang="en">Prime</span></h3>
+                  <p class="portfolio__item--text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/boxes.jpg"
                     alt="boxes"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">Проект <span lang="en">Boxes</span></h3>
+                  <p class="portfolio__item--text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/inspiration.jpg"
                     alt="inspiration"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title"><span lang="en">Inspiration has no Borders</span></h3>
-                  <p class="portfolio-text">Веб-сайт</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h3>
+                  <p class="portfolio__item--text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/book.jpg"
                     alt="book"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
-                  <p class="portfolio-text">Дизайн</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">
+                    Издание <span lang="en"></span>Limited Edition
+                  </h3>
+                  <p class="portfolio__item--text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/lab.jpg"
                     alt="prodject-lab"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title">Проект <span lang="en"></span>LAB</h3>
-                  <p class="portfolio-text">Маркетинг</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title">Проект <span lang="en"></span>LAB</h3>
+                  <p class="portfolio__item--text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="portfolio-item">
+            <li class="portfolio__item">
               <a href="" class="link">
-                <div class="portfolio-wrap">
+                <div class="portfolio__item--wrap">
                   <img
-                    class="portfolio-img"
+                    class="portfolio--img"
                     src="./images/portfolios/laptop2.jpg"
                     alt="laptop2"
                     width="370"
                     height="294"
                   />
-                  <p class="portfolio-wrap-text">
+                  <p class="portfolio__img--text">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, vero.
                   </p>
                 </div>
-                <div class="portfolio-item-content">
-                  <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
-                  <p class="portfolio-text">Приложение</p>
+                <div class="portfolio__item--content">
+                  <h3 class="portfolio__item--title"><span lang="en">Growing Business</span></h3>
+                  <p class="portfolio__item--text">Приложение</p>
                 </div>
               </a>
             </li>
