--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/modern-normalize.css" />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
@@ -341,7 +340,7 @@
               id="user_email"
               class="footer__input"
             />
-            <button type="submit" class="footer-subscribe__btn">
+            <button type="submit" class="footer-subscribe__btn btn">
               Подписаться
               <svg class="footer__btn--icon" width="24" height="24">
                 <use href="./images/icons.svg#send"></use>
